tests/invalid/void_function_as_value/main.py
def greet() -> None:
    print(1)

x: int = greet()
